Update homepage and shop images, move shop images into own folder, and update image files in html

--- a/home.html
+++ b/home.html
@@ -75,6 +75,7 @@
         <section class="hero-banner-img">
           <div class="hero-banner-inner">
             <h1>Fashion celebrating the quirky singularity of life.</h1>
+            <a href="shop.html" class="primary-btn-white">Shop Now</a>
           </div>
         </section>
 
@@ -87,8 +88,8 @@
             <div class="block">
               <div class="image-link">
                 <a href="product_detail1.html">
-                  <img src="img/look-raglan-crew_tie-dye-sky-indigo.png" alt="Lookbook - Raglan Crew">
-                  <img class="hover-img" src="img/raglan-crew_tie-dye-sky-indigo.png" alt="Raglan Crew - Tie Dye Sky Indigo">
+                  <img src="img/shop/look-raglan-crew_tie-dye-sky-indigo.jpg" alt="Lookbook - Raglan Crew">
+                  <img class="hover-img" src="img/shop/raglan-crew_tie-dye-sky-indigo.png" alt="Raglan Crew - Tie Dye Sky Indigo">
                 </a>
               </div>
               <section class="product_quick_info">
@@ -101,8 +102,8 @@
             <div class="block">
               <div class="image-link">
                 <a href="product_detail2.html">
-                  <img src="img/look-hoodie-sky-indigo.png" alt="Lookbook - Hoodie">
-                  <img class="hover-img" src="img/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
+                  <img src="img/shop/look-hoodie-sky-indigo.jpg" alt="Lookbook - Hoodie">
+                  <img class="hover-img" src="img/shop/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
                 </a>
               </div>
               <section class="product_quick_info">
@@ -115,8 +116,8 @@
             <div class="block">
               <div class="image-link">
                 <a href="product_detail1.html">
-                  <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
-                  <img class="hover-img" src="img/leisure-shirt-white.png" alt="Vest - Black Indigo">
+                  <img src="img/shop/look-leisure-shirt-white.jpg" alt="Lookbook - Leisure Shirt">
+                  <img class="hover-img" src="img/shop/leisure-shirt-white.png" alt="Vest - Black Indigo">
                 </a>
               </div>
               <section class="product_quick_info">
@@ -129,8 +130,8 @@
             <div class="block">
               <div class="image-link">
                 <a href="product_detail2.html">
-                  <img src="img/look-blazer-dark-indigo.png" alt="Lookbook - Blazer">
-                  <img class="hover-img" src="img/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
+                  <img src="img/shop/look-blazer-dark-indigo.jpg" alt="Lookbook - Blazer">
+                  <img class="hover-img" src="img/shop/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
                 </a>
               </div>
               <section class="product_quick_info">
