--- a/product_detail1.html
+++ b/product_detail1.html
@@ -124,8 +124,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
-              <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
+              <img src="img/shop/look-rugby-shirt-natural-sky-indigo.jpg" alt="Lookbook - Rugby Shirt">
+              <img class="hover-img" src="img/shop/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -138,8 +138,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
-              <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
+              <img src="img/shop/look-geri-pants-sky-indigo.jpg" alt="Lookbook - Geri Pants">
+              <img class="hover-img" src="img/shop/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -152,8 +152,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-hoodie-tie-dye-sky-indigo.png" alt="Lookbook - Hoodie">
-              <img class="hover-img" src="img/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
+              <img src="img/shop/look-hoodie-tie-dye-sky-indigo.jpg" alt="Lookbook - Hoodie">
+              <img class="hover-img" src="img/shop/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -166,8 +166,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-ob-tee-tie-dye-saffron.png" alt="Lookbook - OB Tee">
-              <img class="hover-img" src="img/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
+              <img src="img/shop/look-ob-tee-tie-dye-saffron.jpg" alt="Lookbook - OB Tee">
+              <img class="hover-img" src="img/shop/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
             </a>
           </div>
           <section class="product_quick_info">
