--- a/product_detail2.html
+++ b/product_detail2.html
@@ -126,8 +126,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-leisure-shirt-saffron.png" alt="Lookbook - Leisure Shirt">
-              <img class="hover-img" src="img/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
+              <img src="img/shop/look-leisure-shirt-saffron.jpg" alt="Lookbook - Leisure Shirt">
+              <img class="hover-img" src="img/shop/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
             </a>
           </div>
           <section class="product_quick_info">
@@ -140,8 +140,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-vest-black-indigo.png" alt="Lookbook - Vest">
-              <img class="hover-img" src="img/vest-black-indigo.png" alt="Vest - Black Indigo">
+              <img src="img/shop/look-vest-black-indigo.jpg" alt="Lookbook - Vest">
+              <img class="hover-img" src="img/shop/vest-black-indigo.png" alt="Vest - Black Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -154,8 +154,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
-              <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
+              <img src="img/shop/look-geri-pants-sky-indigo.jpg" alt="Lookbook - Geri Pants">
+              <img class="hover-img" src="img/shop/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -168,8 +168,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
-              <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
+              <img src="img/shop/look-rugby-shirt-natural-sky-indigo.jpg" alt="Lookbook - Rugby Shirt">
+              <img class="hover-img" src="img/shop/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
