--- a/shop.html
+++ b/shop.html
@@ -165,8 +165,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-classic-shirt-white.png" alt="Lookbook - Classic Shirt">
-              <img class="hover-img" src="img/classic-shirt-white.png" alt="Classic Shirt - White">
+              <img src="img/shop/look-classic-shirt-white.jpg" alt="Lookbook - Classic Shirt">
+              <img class="hover-img" src="img/shop/classic-shirt-white.png" alt="Classic Shirt - White">
             </a>
           </div>
           <section class="product_quick_info">
@@ -179,8 +179,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-vest-black-indigo.png" alt="Lookbook - Vest">
-              <img class="hover-img" src="img/vest-black-indigo.png" alt="Vest - Black Indigo">
+              <img src="img/shop/look-vest-black-indigo.jpg" alt="Lookbook - Vest">
+              <img class="hover-img" src="img/shop/vest-black-indigo.png" alt="Vest - Black Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -193,8 +193,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-jeans-sky-indigo.png" alt="Lookbook - Jeans">
-              <img class="hover-img" src="img/jeans-sky-indigo.png" alt="Jeans - Sky Indigo">
+              <img src="img/shop/look-jeans-sky-indigo.jpg" alt="Lookbook - Jeans">
+              <img class="hover-img" src="img/shop/jeans-sky-indigo.png" alt="Jeans - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -207,8 +207,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-hoodie-sky-indigo.png" alt="Lookbook - Hoodie">
-              <img class="hover-img" src="img/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
+              <img src="img/shop/look-hoodie-sky-indigo.jpg" alt="Lookbook - Hoodie">
+              <img class="hover-img" src="img/shop/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -221,13 +221,13 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-rugby-shirt-saffron-sky-dark-indigo.png" alt="Lookbook - Rugby Shirt">
-              <img class="hover-img" src="img/rugby-shirt-saffron-sky-dark-indigo.png" alt="Rugby Shirt - Saffron/Sky Indigo/Dark Indigo">
+              <img src="img/shop/look-rugby-shirt-saffron-sky-dark-indigo.jpg" alt="Lookbook - Rugby Shirt">
+              <img class="hover-img" src="img/shop/rugby-shirt-saffron-sky-dark-indigo.png" alt="Rugby Shirt - Saffron/Sky Indigo/Dark Indigo">
             </a>
           </div>
           <section class="product_quick_info">
             <h2 class="product_name"><a href="#">Rugby Shirt</a></h2>
-            <h4>Saffron/Sky Indigo/Dark Indigo</h4>
+            <h4>Saffron/Dark Indigo</h4>
             <p class="price">$195.00</p>
           </section>
         </div>
@@ -235,8 +235,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-blazer-dark-indigo.png" alt="Lookbook - Blazer">
-              <img class="hover-img" src="img/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
+              <img src="img/shop/look-blazer-dark-indigo.jpg" alt="Lookbook - Blazer">
+              <img class="hover-img" src="img/shop/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -249,8 +249,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-raglan-crew_tie-dye-sky-indigo.png" alt="Lookbook - Raglan Crew">
-              <img class="hover-img" src="img/raglan-crew_tie-dye-sky-indigo.png" alt="Raglan Crew - Tie Dye Sky Indigo">
+              <img src="img/shop/look-raglan-crew_tie-dye-sky-indigo.jpg" alt="Lookbook - Raglan Crew">
+              <img class="hover-img" src="img/shop/raglan-crew_tie-dye-sky-indigo.png" alt="Raglan Crew - Tie Dye Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -263,8 +263,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-blazer-white.png" alt="Lookbook - Blazer">
-              <img class="hover-img" src="img/blazer-white.png" alt="Blazer - White">
+              <img src="img/shop/look-blazer-white.jpg" alt="Lookbook - Blazer">
+              <img class="hover-img" src="img/shop/blazer-white.png" alt="Blazer - White">
             </a>
           </div>
           <section class="product_quick_info">
@@ -277,8 +277,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
-              <img class="hover-img" src="img/leisure-shirt-white.png" alt="Leisure Shirt - White">
+              <img src="img/shop/look-leisure-shirt-white.jpg" alt="Lookbook - Leisure Shirt">
+              <img class="hover-img" src="img/shop/leisure-shirt-white.png" alt="Leisure Shirt - White">
             </a>
           </div>
           <section class="product_quick_info">
@@ -291,8 +291,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-tank-top-sky-indigo.png" alt="Lookbook - Tank Top">
-              <img class="hover-img" src="img/tank-top-sky-indigo.png" alt="Tank Top - Sky Indigo">
+              <img src="img/shop/look-tank-top-sky-indigo.jpg" alt="Lookbook - Tank Top">
+              <img class="hover-img" src="img/shop/tank-top-sky-indigo.png" alt="Tank Top - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -305,8 +305,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-leisure-shirt-saffron.png" alt="Lookbook - Leisure Shirt">
-              <img class="hover-img" src="img/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
+              <img src="img/shop/look-leisure-shirt-saffron.jpg" alt="Lookbook - Leisure Shirt">
+              <img class="hover-img" src="img/shop/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
             </a>
           </div>
           <section class="product_quick_info">
@@ -319,8 +319,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
-              <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
+              <img src="img/shop/look-rugby-shirt-natural-sky-indigo.jpg" alt="Lookbook - Rugby Shirt">
+              <img class="hover-img" src="img/shop/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -333,8 +333,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
-              <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
+              <img src="img/shop/look-geri-pants-sky-indigo.jpg" alt="Lookbook - Geri Pants">
+              <img class="hover-img" src="img/shop/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -347,8 +347,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-hoodie-tie-dye-sky-indigo.png" alt="Lookbook - Hoodie">
-              <img class="hover-img" src="img/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
+              <img src="img/shop/look-hoodie-tie-dye-sky-indigo.jpg" alt="Lookbook - Hoodie">
+              <img class="hover-img" src="img/shop/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
@@ -361,8 +361,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail1.html">
-              <img src="img/look-ob-tee-tie-dye-saffron.png" alt="Lookbook - OB Tee">
-              <img class="hover-img" src="img/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
+              <img src="img/shop/look-ob-tee-tie-dye-saffron.jpg" alt="Lookbook - OB Tee">
+              <img class="hover-img" src="img/shop/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
             </a>
           </div>
           <section class="product_quick_info">
@@ -375,8 +375,8 @@
         <div class="block">
           <div class="image-link">
             <a href="product_detail2.html">
-              <img src="img/look-vest-natural.png" alt="Lookbook - Vest">
-              <img class="hover-img" src="img/vest-natural.png" alt="Vest - Natural">
+              <img src="img/shop/look-vest-natural.jpg" alt="Lookbook - Vest">
+              <img class="hover-img" src="img/shop/vest-natural.png" alt="Vest - Natural">
             </a>
           </div>
           <section class="product_quick_info">
