--- a/lookbooks.html
+++ b/lookbooks.html
@@ -74,9 +74,10 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <h4 class="lookbook_time"><a href="#">SS19</a></h4>
+        <h3 class="lookbook_name"><a href="#">Saffron Sabbatical</a></h3><br>
+        <h4 class="lookbook_time">SS19</h4>
         <a href="#"><img src="img/lookbooks/ss19.jpg" alt="Lookbook - Spring/Summer 2019"></a>
-        <h3 class="lookbook_name"><a href="#">Saffron Sabbatical <br>Autumn | Winter 2019 </a></h3>
+        <!-- <h3 class="lookbook_name"><a href="#">Saffron Sabbatical <br>Autumn | Winter 2019 </a></h3> -->
       </div>
 
       <div class="mySlides fade">
