Resize all lookbook images to be the same, update lookbooks.html with all images

--- a/lookbooks.html
+++ b/lookbooks.html
@@ -71,27 +71,69 @@
     <section id="lookbook_overview">
 
     <h2 class="main-page-title">Lookbooks</h2>
+
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
         <h3 class="lookbook_name"><a href="#">Saffron Sabbatical</a></h3><br>
         <h4 class="lookbook_time">SS19</h4>
         <a href="#"><img src="img/lookbooks/ss19.jpg" alt="Lookbook - Spring/Summer 2019"></a>
-        <!-- <h3 class="lookbook_name"><a href="#">Saffron Sabbatical <br>Autumn | Winter 2019 </a></h3> -->
+        <div class="slide-number-text">1 / 9</div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <h4 class="lookbook_time"><a href="#">AW18</a></h4>
+        <h3 class="lookbook_name"><a href="#">Staycation</a></h3><br>
+        <h4 class="lookbook_time">AW18</h4>
         <a href="#"><img src="img/lookbooks/aw18.jpg" alt="Lookbook - Autumn/Winter 2018"></a>
-        <h3 class="lookbook_name"><a href="#">Staycation<br> Autumn | Winter 2018</a></h3>
+        <div class="slide-number-text">2 / 9</div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <h4 class="lookbook_time"><a href="#">SS18</a></h4>
+        <h3 class="lookbook_name"><a href="#">Spring Dance</a></h3><br>
+        <h4 class="lookbook_time">SS18</h4>
         <a href="#"><img src="img/lookbooks/ss18.jpg" alt="Lookbook - Spring/Summer 2018"></a>
-        <h3 class="lookbook_name"><a href="#">Spring Dance<br> Autumn | Spring 2019</a></h3>
+        <div class="slide-number-text">3 / 9</div>
+      </div>
+
+      <div class="mySlides fade">
+        <h3 class="lookbook_name"><a href="#">Back To School</a></h3><br>
+        <h4 class="lookbook_time">AW17</h4>
+        <a href="#"><img src="img/lookbooks/aw17.jpg" alt="Lookbook - Autumn/Winter 2017"></a>
+        <div class="slide-number-text">4 / 9</div>
+      </div>
+
+      <div class="mySlides fade">
+        <h3 class="lookbook_name"><a href="#">Summer Camp</a></h3><br>
+        <h4 class="lookbook_time">SS17</h4>
+        <a href="#"><img src="img/lookbooks/ss17.jpg" alt="Lookbook - Spring/Summer 2017"></a>
+        <div class="slide-number-text">5 / 9</div>
+      </div>
+
+      <div class="mySlides fade">
+        <h3 class="lookbook_name"><a href="#">Hand Me Downs</a></h3><br>
+        <h4 class="lookbook_time">AW16</h4>
+        <a href="#"><img src="img/lookbooks/aw16.jpg" alt="Lookbook - Autumn/Winter 2016"></a>
+        <div class="slide-number-text">6 / 9</div>
+      </div>
+
+      <div class="mySlides fade">
+        <h3 class="lookbook_name"><a href="#">Plant Aridity Awareness Society</a></h3><br>
+        <h4 class="lookbook_time">SS16</h4>
+        <a href="#"><img src="img/lookbooks/ss16.jpg" alt="Lookbook - Spring/Summer 2016"></a>
+        <div class="slide-number-text">7 / 9</div>
+      </div>
+
+      <div class="mySlides fade">
+        <h3 class="lookbook_name"><a href="#">Enthusiasm & Naps</a></h3><br>
+        <h4 class="lookbook_time">AW15</h4>
+        <a href="#"><img src="img/lookbooks/aw15.jpg" alt="Lookbook - Autumn/Winter 2015"></a>
+        <div class="slide-number-text">8 / 9</div>
+      </div>
+
+      <div class="mySlides fade">
+        <h3 class="lookbook_name"><a href="#">Spring Jinx</a></h3><br>
+        <h4 class="lookbook_time">SS15</h4>
+        <a href="#"><img src="img/lookbooks/ss15.jpg" alt="Lookbook - Spring/Summer 2015"></a>
+        <div class="slide-number-text">9 / 9</div>
       </div>
 
       <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -100,9 +142,15 @@
       <br>
 
       <div class="dot-item">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+        <span class="dot" onclick="currentSlide(7)"></span>
+        <span class="dot" onclick="currentSlide(8)"></span>
+        <span class="dot" onclick="currentSlide(9)"></span>
       </div>
     </section>
 
